    - Created libsox0 package that contains the SoX library.
    - Fixed sound file types description.
    - Added build dependency on libao-dev, libltdl3-dev, ladspa-sdk and
      libavcodec-dev.
    - No longer conflicting with libst and libst-dev.
    - Splitted format libraries in different packages (libsox-fmt-foo).
    - Added !hurd-i386 to dependency on libasound-dev (closes: #440470).
  * [debian/libsox-dev.dirs]:
    - Added /usr/lib/sox/ for format plugins.
  * [debian/libsox0.install, debian/libsox-dev.install]:
    - Added library.
  * [debian/libsox-fmt-*]:
    - Added format plugins.
  * [debian/rules]:
    - Removed fPIC from CFLAGS as libtool takes care of it upstream.
    - Removed LDFLAGS -Wl,-z,defs as upstream is now doing it.
    - Added DEB_DH_MAKESHLIBS_ARGS -Xfmt to avoid useless calls to ldconfig.
	
 -- Pascal Giard <evilynux@gmail.com>  Fri, 06 Jul 2007 02:57:39 -0400

sox (13.0.0-1) unstable; urgency=low

  * New upstream version:
    - Huge amount of changes (closes: #345726, #274519, #257525).
    - Please see the upstream changelog.
    - Warning: some scripts may break with this new version.
    - Guenter set as co-maintainer.
    - soxmix no longer exists (closes:  #349178, #374096).
  * Taking over the package with Guenter's permission.
    - Thanks alot for all those years of maintenance!
  * [debian/control]:
    - Added build-depends on libsamplerate0-dev, libgsm1-dev and
      libsndfile1-dev.
    - Added !kfreebsd-amd64 to libasound2-dev (closes: #361487).
  * [debian/patches]: No more patches, everything is fixed upstream.
  * [debian/rules]: 
    - Added -D_REENTRANT as required by policy on libraries.
    - Added -Wl,-z,defs to enforce symbol resolution at build time.
    - Disabled shared library for now, see README.Debian.
  * [debian/README.Debian]:
    - Added instructions to build from CVS.
    - Added information as to why shared lib is disabled for now.
