@@ -3,7 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: Pascal Giard <pascal@debian.org>
 Uploaders: Guenter Geiger (Debian/GNU) <geiger@debian.org>
-Build-Depends: debhelper (>= 1.2.64), cdbs, libltdl3-dev, libvorbis-dev, libmad0-dev, libgsm1-dev, libsndfile1-dev (>= 1.0.12), libsamplerate0-dev, libavcodec-dev (>= 0.cvs20070301), libao-dev, ladspa-sdk, libasound2-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386]
+Build-Depends: debhelper (>= 1.2.64), cdbs, libltdl3-dev, libvorbis-dev, libmad0-dev, libgsm1-dev, libsndfile1-dev (>= 1.0.12), libsamplerate0-dev, libavcodec-dev (>= 0.cvs20070301), libao-dev, ladspa-sdk, libasound2-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386], chrpath
 Standards-Version: 3.7.2
 
 Package: sox
@@ -24,7 +24,7 @@ Description: Swiss army knife of sound processing
 Package: libsox0
 Architecture: any
 Section: sound
-Depends: ${shlibs:Depends}, libsox-fmt-base (=${Source-Version})
+Depends: ${shlibs:Depends}, libsox-fmt-base (=${binary:Version})
 Recommends: libsox-fmt-all, libsox-fmt-alsa | libsox-fmt-ao | libsox-fmt-oss
 Description: SoX library
  SoX is the swiss army knife of sound processing.
@@ -166,7 +166,7 @@ Description: SoX library
 Package: libsox-dev
 Architecture: any
 Section: devel
-Depends: libsox0 (=${Source-Version}), libsox-fmt-base (=${Source-Version}), ${shlibs:Depends}
+Depends: libsox0 (=${binary:Version}), libsox-fmt-base (=${binary:Version}), ${shlibs:Depends}
 Description: Development files for the SoX library
  SoX is the swiss army knife of sound processing.
  .
