@@ -19,6 +19,8 @@ sox (14.0.0.cvs-1) unstable; urgency=low
     - No longer conflicting with libst and libst-dev.
     - Splitted format libraries in different packages (libsox-fmt-foo).
     - Added !hurd-i386 to dependency on libasound-dev (closes: #440470).
+    - Replaced ${Source-Version} with ${binary:Version}.
+    - Added Build-Dep on chrpath.
   * [debian/libsox-dev.dirs]:
     - Added /usr/lib/sox/ for format plugins.
   * [debian/libsox0.install, debian/libsox-dev.install]:
@@ -29,8 +31,9 @@ sox (14.0.0.cvs-1) unstable; urgency=low
     - Removed fPIC from CFLAGS as libtool takes care of it upstream.
     - Removed LDFLAGS -Wl,-z,defs as upstream is now doing it.
     - Added DEB_DH_MAKESHLIBS_ARGS -Xfmt to avoid useless calls to ldconfig.
+    - Fixed all lintian binary-or-shlib-defines-rpath warnings using chrpath.
 	
- -- Pascal Giard <evilynux@gmail.com>  Fri, 06 Jul 2007 02:57:39 -0400
+ -- Pascal Giard <evilynux@gmail.com>  Sun, 09 Sep 2007 11:22:32 -0400
 
 sox (13.0.0-1) unstable; urgency=low
 
